--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@
 language: python
 git:
   depth: 50 # Need old commits for determining version of untagged builds
+env: DJANGO=1.11.9
 matrix:
   include:
   - python: 2.7
-    env: DJANGO=1.11.9
+  - python: 3.4
 install:
   - pip install Django==$DJANGO
   - make bootstrap
