--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install Django==$DJANGO
   - make bootstrap
 script:
-  - make test
+  - make test lint
 deploy:
   provider: pypi
   user: opentracing-contrib
