Add a Travis profile to test against Django 1.9
This is as we want to make sure old versions using
old style Middleware still work just fine.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ matrix:
   include:
   - python: 2.7
   - python: 3.4
+  - python: 2.7 # Old Middleware classes
+    env: DJANGO=1.9
 install:
   - pip install Django==$DJANGO
   - make bootstrap
