--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,15 @@
 [tox]
-envlist = py27-django111,py36-django{111,20,21}
+envlist = py27-django{19,110,111},py36-django{19,110,111,20,21}
 
 [testenv]
 deps =
+    django19: Django>=1.9,<1.10
+    django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     opentracing<2.0
+    .[tests]
 whitelist_externals = make
 commands =
     make test
