--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 language: python
 git:
   depth: 50 # Need old commits for determining version of untagged builds
+env: DJANGO=1.11.9
 matrix:
   include:
   - python: 2.7
-    env: DJANGO=1.11.9
+  - python: 3.4
+  - python: 2.7 # Old Middleware classes
+    env: DJANGO=1.9
   - python: 3.4 # Django 2 support
     env: DJANGO==2.0
 install:
-- pip install Django==$DJANGO
-- pip install -e .
+  - pip install Django==$DJANGO
+  - make bootstrap
 script:
-- make test
+  - make test lint
 deploy:
   provider: pypi
   user: calberto.cortez
