--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,9 @@
 include LICENSE
 include versioneer.py
 include django_opentracing/_version.py
+include *.txt
+recursive-include example *.md
+recursive-include example *.png
+recursive-include example *.py
+recursive-include tests *.py
+recursive-include tests *.rst
